added exclude function to rsync backup.sh

--- a/refs/ccgd_rhel7_docs.Rmd
+++ b/refs/ccgd_rhel7_docs.Rmd
@@ -867,6 +867,10 @@ With no arguments set, this script will perform a site knit rendering, run `back
 
 ***
 
+### clear_files.sh
+
+
+***
 
 ### email_notify.sh
 
