--- a/index.Rmd
+++ b/index.Rmd
@@ -49,7 +49,7 @@ The most recent table build was completed on:
 
 ##### Site Address
 
-With the overhaul that was completed in 2019 we also moved to a new hosting arrangement. Due to OIT policies we have a redirect in place for the original site address. As a result, there are several site addresses that can be used to navigate here. Do not be alarmed if the address in the browser bar changes as navigation takes place.
+With our overhaul in 2019 we also moved to a new hosting arrangement. OIT policies require that we have a redirect in place for the original site address. As a result, there are several site addresses that can be used to navigate here. Do not be alarmed if the address in the browser bar changes as navigation takes place.
 
 **Possible URLs:**
 
